<resources>
    <string name="app_name">Portal to hell</string>
    <string name="title_news">Новости</string>
    <string name="title_group">Группа</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_search">Поиск чего-то</string>
    <string name="title_thumb">Большой палец</string>
    <string name="prev_day"><![CDATA[<<]]></string>
    <string name="date_example">4 февраля</string>
    <string name="next_day"><![CDATA[>>]]></string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pair_start_example">8:30</string>
    <string name="pair_end_example">10:00</string>
    <string name="pair_name_example">Безопасность жизнедеятельности</string>
    <string name="pair_type_example">Лекция</string>
    <string name="prepod_name_example">Буслаев Станислав Иванович</string>
</resources>
