<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/main_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/main_group"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/round_event_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/main_statistic"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/main_menu"
        android:title="@string/title_thumb"/>

</menu>
